--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Params-Dry-Declare
 
+0.9904 2014-03-07
+    - kwalitee: LICENSE file META.yml
 0.9903 2013-07-30
  - RT#87453 fix Changes format
 0.9902 2013-07-30 
