Import of NEO/Params-Dry-Declare-0.9906 from CPAN.
gitpan-cpan-distribution: Params-Dry-Declare
gitpan-cpan-version:      0.9906
gitpan-cpan-path:         NEO/Params-Dry-Declare-0.9906.tar.gz
gitpan-cpan-author:       NEO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 Revision history for Params-Dry-Declare
 
+0.9906 2014-03-18
+ - adding support for multi types provided in Params::Dry
 0.9905 2014-03-07
-    - kwalitee: fix version number in pod
+ - kwalitee: fix version number in pod
 0.9904 2014-03-07
-    - kwalitee: LICENSE file META.yml
+ - kwalitee: LICENSE file META.yml
 0.9903 2013-07-30
  - RT#87453 fix Changes format
 0.9902 2013-07-30 
