Import of NEO/Params-Dry-Declare-0.9907 from CPAN.
gitpan-cpan-distribution: Params-Dry-Declare
gitpan-cpan-version:      0.9907
gitpan-cpan-path:         NEO/Params-Dry-Declare-0.9907.tar.gz
gitpan-cpan-author:       NEO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Params-Dry-Declare
 
+0.9907 2014-03-18
+ - multi types tests are skipped if Params::Dry < 1.20
 0.9906 2014-03-18
  - adding support for multi types provided in Params::Dry
 0.9905 2014-03-07
